Email template and string tokenizer

--- a/EixoX.Extensions/EixoX.Extensions.csproj
+++ b/EixoX.Extensions/EixoX.Extensions.csproj
@@ -39,8 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailTemplate.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="TextWriterExtensions.cs" />
+    <Compile Include="Tokenizer.cs" />
     <Compile Include="XmlExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
