--- a/EixoX.Extensions/EixoX.Extensions.csproj
+++ b/EixoX.Extensions/EixoX.Extensions.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmailTemplate.cs" />
+    <Compile Include="ListExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TextWriterExtensions.cs" />
