--- a/EixoX.Brasil/EixoX.Brasil.csproj
+++ b/EixoX.Brasil/EixoX.Brasil.csproj
@@ -55,7 +55,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\csharp-jetfuel\EixoX\EixoX.csproj">
+    <ProjectReference Include="..\EixoX\EixoX.csproj">
       <Project>{0a418683-14d0-433f-ba4d-c4919c8069a7}</Project>
       <Name>EixoX</Name>
     </ProjectReference>
