--- a/EixoX.Web/EixoX.Web.csproj
+++ b/EixoX.Web/EixoX.Web.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\csharp-jetfuel\EixoX\EixoX.csproj">
+    <ProjectReference Include="..\EixoX\EixoX.csproj">
       <Project>{0a418683-14d0-433f-ba4d-c4919c8069a7}</Project>
       <Name>EixoX</Name>
     </ProjectReference>
