--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -87,7 +87,6 @@
     <Compile Include="Helpers\UrlPathHelper.cs" />
     <Compile Include="Html\BootstrapControl.cs" />
     <Compile Include="Html\BootstrapControlFactory.cs" />
-    <Compile Include="Html\BootstrapHelper.cs" />
     <Compile Include="Html\BootstrapPresenter.cs" />
     <Compile Include="Html\BootstrapPresenterControl.cs" />
     <Compile Include="Html\Controls\BootstrapCheckbox.cs" />
@@ -102,8 +101,24 @@
     <Compile Include="Html\Controls\BootstrapSingleline.cs" />
     <Compile Include="Html\Controls\BootstrapTimepicker.cs" />
     <Compile Include="Html\Controls\BootstrapFileUploader.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Checkbox.cs" />
+    <Compile Include="Html\Controls\Bootstrap3CheckboxGroup.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Datepicker.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Dropdown.cs" />
+    <Compile Include="Html\Controls\Bootstrap3FileUploader.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Hidden.cs" />
+    <Compile Include="Html\Controls\Bootstrap3HtmlEditor.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Multiline.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Password.cs" />
+    <Compile Include="Html\Controls\Bootstrap3RadioGroup.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Singleline.cs" />
+    <Compile Include="Html\Controls\Bootstrap3Timepicker.cs" />
     <Compile Include="Html\Controls\HtmlFileUploader.cs" />
     <Compile Include="Html\Controls\HtmlColorPicker.cs" />
+    <Compile Include="Html\Bootstrap3Control.cs" />
+    <Compile Include="Html\Bootstrap3ControlFactory.cs" />
+    <Compile Include="Html\Bootstrap3Presenter.cs" />
+    <Compile Include="Html\Bootstrap3PresenterControl.cs" />
     <Compile Include="Restrictions\MaxAge.cs" />
     <Compile Include="Restrictions\MinAge.cs" />
     <Compile Include="Viewee.cs" />
