--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -32,6 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Security, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\Mono.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\Glambox\WebApps\packages\Newtonsoft.Json.5.0.8\lib\net20\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Npgsql, Version=2.1.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -77,6 +88,7 @@
     <Compile Include="Adapters\XmlDocumentStringAdapter.cs" />
     <Compile Include="Adapters\XmlElementStringAdapter.cs" />
     <Compile Include="Base36.cs" />
+    <Compile Include="Database\PostgresDialect.cs" />
     <Compile Include="Helpers\DateTimeHelper.cs" />
     <Compile Include="Helpers\CharHelper.cs" />
     <Compile Include="Helpers\EnumerationHelper.cs" />
@@ -116,6 +128,7 @@
     <Compile Include="Html\Controls\Bootstrap3ControlFactory.cs" />
     <Compile Include="Html\Bootstrap3Presenter.cs" />
     <Compile Include="Html\Bootstrap3PresenterControl.cs" />
+    <Compile Include="Restrictions\GuidAttribute.cs" />
     <Compile Include="Restrictions\MaxAge.cs" />
     <Compile Include="Restrictions\MinAge.cs" />
     <Compile Include="UsecaseResult.cs" />
@@ -324,6 +337,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="References\Mono.Security.dll" />
+    <Content Include="References\Npgsql.dll" />
+    <Content Include="References\Npgsql.pdb" />
+    <Content Include="References\Npgsql.xml" />
     <Content Include="Restrictions\RestrictionMessages.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
@@ -332,6 +349,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
