--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Adapters\XmlDocumentStringAdapter.cs" />
     <Compile Include="Adapters\XmlElementStringAdapter.cs" />
     <Compile Include="Base36.cs" />
+    <Compile Include="Cached.cs" />
     <Compile Include="Database\PostgresDialect.cs" />
     <Compile Include="Helpers\DateTimeHelper.cs" />
     <Compile Include="Helpers\CharHelper.cs" />
