--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Helpers\EnumerationHelper.cs" />
     <Compile Include="Helpers\RandomHelper.cs" />
     <Compile Include="Helpers\UrlPathHelper.cs" />
+    <Compile Include="Helpers\XmlHelper.cs" />
     <Compile Include="Html\BootstrapControl.cs" />
     <Compile Include="Html\BootstrapControlFactory.cs" />
     <Compile Include="Html\BootstrapPresenter.cs" />
