--- a/EixoX.Web/EixoX.Web.csproj
+++ b/EixoX.Web/EixoX.Web.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BootstrapClassSelectResult.cs" />
+    <Compile Include="BootstrapQueryHelper.cs" />
+    <Compile Include="BootstrapQueryHelperColumn.cs" />
     <Compile Include="Gravatar.cs" />
     <Compile Include="UIHtmlExtensions.cs" />
     <Compile Include="JavascriptBuilder.cs" />
