[Grey folder idea]

--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -96,40 +96,40 @@
     <Compile Include="Helpers\RandomHelper.cs" />
     <Compile Include="Helpers\UrlPathHelper.cs" />
     <Compile Include="Helpers\XmlHelper.cs" />
-    <Compile Include="Html\BootstrapControl.cs" />
-    <Compile Include="Html\BootstrapControlFactory.cs" />
-    <Compile Include="Html\BootstrapPresenter.cs" />
-    <Compile Include="Html\BootstrapPresenterControl.cs" />
-    <Compile Include="Html\Controls\BootstrapCheckbox.cs" />
-    <Compile Include="Html\Controls\BootstrapCheckboxGroup.cs" />
-    <Compile Include="Html\Controls\BootstrapDatepicker.cs" />
-    <Compile Include="Html\Controls\BootstrapDropdown.cs" />
-    <Compile Include="Html\Controls\BootstrapHidden.cs" />
-    <Compile Include="Html\Controls\BootstrapHtmlEditor.cs" />
-    <Compile Include="Html\Controls\BootstrapMultiline.cs" />
-    <Compile Include="Html\Controls\BootstrapPassword.cs" />
-    <Compile Include="Html\Controls\BootstrapRadioGroup.cs" />
-    <Compile Include="Html\Controls\BootstrapSingleline.cs" />
-    <Compile Include="Html\Controls\BootstrapTimepicker.cs" />
-    <Compile Include="Html\Controls\BootstrapFileUploader.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Checkbox.cs" />
-    <Compile Include="Html\Controls\Bootstrap3CheckboxGroup.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Datepicker.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Dropdown.cs" />
-    <Compile Include="Html\Controls\Bootstrap3FileUploader.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Hidden.cs" />
-    <Compile Include="Html\Controls\Bootstrap3HtmlEditor.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Multiline.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Password.cs" />
-    <Compile Include="Html\Controls\Bootstrap3RadioGroup.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Singleline.cs" />
-    <Compile Include="Html\Controls\Bootstrap3Timepicker.cs" />
-    <Compile Include="Html\Controls\HtmlFileUploader.cs" />
-    <Compile Include="Html\Controls\HtmlColorPicker.cs" />
-    <Compile Include="Html\Bootstrap3Control.cs" />
-    <Compile Include="Html\Controls\Bootstrap3ControlFactory.cs" />
-    <Compile Include="Html\Bootstrap3Presenter.cs" />
-    <Compile Include="Html\Bootstrap3PresenterControl.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapControl.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapControlFactory.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapPresenter.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapPresenterControl.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapCheckbox.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapCheckboxGroup.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapDatepicker.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapDropdown.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapHidden.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapHtmlEditor.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapMultiline.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapPassword.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapRadioGroup.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapSingleline.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapTimepicker.cs" />
+    <Compile Include="Html\Bootstrap2\BootstrapFileUploader.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Checkbox.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3CheckboxGroup.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Datepicker.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Dropdown.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3FileUploader.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Hidden.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3HtmlEditor.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Multiline.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Password.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3RadioGroup.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Singleline.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Timepicker.cs" />
+    <Compile Include="Html\Vanilla\HtmlFileUploader.cs" />
+    <Compile Include="Html\Vanilla\HtmlColorPicker.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Control.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3ControlFactory.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3Presenter.cs" />
+    <Compile Include="Html\Bootstrap3\Bootstrap3PresenterControl.cs" />
     <Compile Include="Html\HtmlRaw.cs" />
     <Compile Include="Restrictions\GuidAttribute.cs" />
     <Compile Include="Restrictions\MaxAge.cs" />
@@ -162,17 +162,17 @@
     <Compile Include="Globalization\GlobalizationList.cs" />
     <Compile Include="Globalization\IGlobalization.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
-    <Compile Include="Html\Controls\HtmlCheckbox.cs" />
-    <Compile Include="Html\Controls\HtmlCheckboxGroup.cs" />
-    <Compile Include="Html\Controls\HtmlFile.cs" />
-    <Compile Include="Html\Controls\HtmlHidden.cs" />
+    <Compile Include="Html\Vanilla\HtmlCheckbox.cs" />
+    <Compile Include="Html\Vanilla\HtmlCheckboxGroup.cs" />
+    <Compile Include="Html\Vanilla\HtmlFile.cs" />
+    <Compile Include="Html\Vanilla\HtmlHidden.cs" />
     <Compile Include="Html\HtmlControlFactory.cs" />
-    <Compile Include="Html\Controls\HtmlDatepicker.cs" />
-    <Compile Include="Html\Controls\HtmlDropdown.cs" />
-    <Compile Include="Html\Controls\HtmlMultiline.cs" />
-    <Compile Include="Html\Controls\HtmlPassword.cs" />
-    <Compile Include="Html\Controls\HtmlRadioGroup.cs" />
-    <Compile Include="Html\Controls\HtmlSingleline.cs" />
+    <Compile Include="Html\Vanilla\HtmlDatepicker.cs" />
+    <Compile Include="Html\Vanilla\HtmlDropdown.cs" />
+    <Compile Include="Html\Vanilla\HtmlMultiline.cs" />
+    <Compile Include="Html\Vanilla\HtmlPassword.cs" />
+    <Compile Include="Html\Vanilla\HtmlRadioGroup.cs" />
+    <Compile Include="Html\Vanilla\HtmlSingleline.cs" />
     <Compile Include="Html\HtmlAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -193,8 +193,8 @@
     <Compile Include="Html\HtmlNodeCollection.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Html\HtmlPresenter.cs" />
-    <Compile Include="Html\HtmlPresenterControl.cs" />
+    <Compile Include="Html\Vanilla\HtmlPresenter.cs" />
+    <Compile Include="Html\Vanilla\HtmlPresenterControl.cs" />
     <Compile Include="Html\HtmlSimple.cs">
       <SubType>Code</SubType>
     </Compile>
