--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -136,6 +136,8 @@
     <Compile Include="Restrictions\MaxAge.cs" />
     <Compile Include="Restrictions\MinAge.cs" />
     <Compile Include="Text\DelimitedTextReader.cs" />
+    <Compile Include="Text\FixedLengthTextReader.cs" />
+    <Compile Include="Text\Tokenizer.cs" />
     <Compile Include="UsecaseResult.cs" />
     <Compile Include="Viewee.cs" />
     <Compile Include="LazyConstructor.cs" />
