--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Cached.cs" />
     <Compile Include="Components\Wizard.cs" />
     <Compile Include="Components\WizardStep.cs" />
+    <Compile Include="Database\NonUpdateable.cs" />
     <Compile Include="Database\OracleDb.cs" />
     <Compile Include="Database\OracleDialect.cs" />
     <Compile Include="Database\PostgresDialect.cs" />
